--- a/html/git.html
+++ b/html/git.html
@@ -16,7 +16,7 @@
         1. <b class="red" style="color:red">git init</b>
     </p>
     <p>
-        Эта команда используется для клонирования проекта как репозитория git.
+        Эта команда создаёт в текущем каталоге новый подкаталог с именем .git, содержащий все необходимые файлы репозитория — структуру Git репозитория. 
     </p>
     <p>
         <br>
@@ -41,13 +41,7 @@
     <p>
         <code>git config --local user.email "<a href="mailto:your_email@example.com">your_email@example.com</a>"</code>
     </p>
-    <p>
-        <code> &nbsp;git config --global user.name "Name"</code>
-    </p>
-    <p>
-        <code> &nbsp;git config --global user.email "<a href="mailto:your_email@example.com">your_email@example.com</a>"</code>
-    </p>
-    <br>
+        <br>
     <p>
         Если надо скопировать только файлы:
     </p>
@@ -109,7 +103,7 @@
         <code> git add -A</code>
     </p>
     <p>
-        -
+        Эта команда используется для индексирования ВСЕХ неустановленных файлов.
     </p>
     <p>
         <code>git add
@@ -147,7 +141,7 @@
         8. <b class="red" style="color:red">git commit</b>
     </p>
     <p>
-        -
+        Эта команда совершает коммит  — «закрепляет» промежуточные результаты.
     </p>
     <p>
         <code> git commit -m “Text message”</code>
@@ -202,15 +196,16 @@
     <br><br><br><br><br>
     <br>
     <p>
-        11. <b class="red" style="color:blue">git pull&nbsp;</b>
+        11. <b class="red" style="color:#ff5100">git pull&nbsp;</b>
     </p>
     <p>
         Эта команда используется для извлечения только что полученной информации и ее загрузки в локальный репозиторий.
         git pull запускает немедленное обновление локального репозитория.
     </p>
     <p>
-        12. git branch Эта команда используется для создания, просмотра переименования и удаления ветки, на которой вы
-        сейчас находитесь.&nbsp;
+        12. <b class="red" style="color:#ff5100">git branch </b> 
+        <p>Эта команда используется для создания, просмотра переименования и удаления ветки, на которой вы
+        сейчас находитесь. </p>
     </p>
     <p>
         <code>git branch -a</code>
@@ -226,7 +221,7 @@
     </p>
     <br>
     <p>
-        13. <b>git checkout</b>
+        13. <b class="red" style="color:red">git checkout</b>
     </p>
     <p>
         Пример: <code>git checkout master</code> или <code>git checkout develop</code>
@@ -241,7 +236,7 @@
     </p>
     <br>
     <p>
-        14. <b>git merge</b>
+        14. <b class="red" style="color:red">git merge</b>
     </p>
     <p>
         Эта команда используется для объединения двух веток. Для этого укажите ветку, которую вы хотите унаследовать
@@ -256,7 +251,7 @@
     </p>
     <br>
     <p>
-        15. <b>git merge — abort</b>
+        15. <b class="red" style="color:red">git merge — abort</b>
     </p>
     <p>
         Эта команда используется для отмены слияния.
@@ -286,7 +281,7 @@
     </p>
     <br>
     <p>
-        16. <b>git reset — hard HEAD</b>
+        16. <b class="red" style="color:red">git reset — hard HEAD</b>
     </p>
     <p>
         Эта команда удалит все изменения, внесенные вами в ваш локальный репозиторий, и обновит его до последней версии,
@@ -294,20 +289,16 @@
     </p>
     <br>
     <p>
-        17. <b>git reset HEAD^</b>
+        17. <b class="red" style="color:red">git reset HEAD^</b>
     </p>
     <p>
-  -
+        Эта команда перемещает текущую ветку назад на два коммита, эффективно удаляя два снапшота, которые мы только что создали, из истории проекта. Он отменяет случайное закоммичивание и сохраняет изменения.
     </p>
     <br>
     <p>
-        21. <b>git diff</b>
-    </p>
-          Эта команда перемещает текущую ветку назад на два коммита, эффективно удаляя два снапшота, которые мы только что
-        создали, из истории проекта. Он отменяет случайное закоммичивание и сохраняет изменения.
-    <p>
-        <code> git diff
-            <file></file>
+        18. <b class="red" style="color:red">git diff</b>
+         <p> <code> git diff
+                    <file></file>
         </code> — частое использование&nbsp;
     </p>
     <p>
@@ -317,10 +308,10 @@
         <br>
     </p>
     <p>
-        22. <b>git rebase</b>
+        19. <b class="red" style="color:red">git rebase</b>
     </p>
     <p>
-     -
+        Полезно, если вы работали с веткой, но затем вам нужно объединить изменения, сделанные в этой ветке, с другой. С помощью git rebase вы можете «переместить» свою ветку поверх последней версии. Это также полезно, если команда следует общепринятым соглашениям о коммитах, таким как объединение коммитов вместе или разделение «больших» коммитов на «меньшие». Это используется в основном для «реорганизации» ваших коммитов.
     </p>
     <p>
         <code>git rebase -i HEAD~N</code>
@@ -331,7 +322,7 @@
     </p>
     <br>
     <p>
-        23. <b>git stash</b>
+        20. <b class="red" style="color:red">git stash</b>
     </p>
     <p>
         Эта команда используется для сохранения неподтверждённых изменений в отдельном хранилище, чтобы можно было
