--- a/html/macOS.html
+++ b/html/macOS.html
@@ -43,14 +43,9 @@
             стереть с компьютера</em></strong>. Чтобы удалить каталог&nbsp;Timeweb и все его содержимое из домашней
         папки пользователя, введем: <strong>rm ~/Timeweb</strong>.
     </li>
-    <li><strong>rmdir</strong> — создает новую директорию. Допустим, мы хотим создать папку под новый проект на рабочем
-        столе. Для этого введем команду: <strong>mkdir ~/Desktop/Timeweb</strong>. При желании можно разместить новую
-        папку в промежутке между двумя уже существующими. К примеру: <strong>mkdir -p
-            /home/New_Project/Newest_Project</strong> создаст папку New_Project в домашней директории и станет родителям
-        для существующей папки Newest_Project.
+    <li><strong>rmdir</strong> — удаляет пустую папку. Акцентируем внимание на слове «пустую». В отличие от rm, rmdir не трогает другие файлы и субдиректории.
     </li>
-    <li><strong>mkdir</strong> — удаляет пустую папку. Акцентируем внимание на слове «пустую». В отличие от rm, rmdir не
-        трогает другие файлы и субдиректории.
+    <li><strong>mkdir</strong> — создает новую директорию. Допустим, мы хотим создать папку под новый проект на рабочем столе. Для этого введем команду: mkdir ~/Desktop/Timeweb. При желании можно разместить новую папку в промежутке между двумя уже существующими. К примеру: mkdir -p /home/New_Project/Newest_Project создаст папку New_Project в домашней директории и станет родителям для существующей папки Newest_Project.
     </li>
     <li><strong>cat</strong> — показывает содержимое документов. Можно скормить этой утилите любой текстовый файл, и она
         прямо в терминале отобразит все, что в нем записано. Пишем: <strong>cat <em>путь до файла, содержимое которого
